implemented basic state editor

--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
 * German localization
 * manuals
+* file locking
+* rename plugin? (booking calendar is not quite suitable)
+* document CSS requirement
