--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-﻿Bcal_XH -- a CMSimple_XH plugin
+﻿Ocal_XH -- a CMSimple_XH plugin
 Copyright (c) 2014 Christoph M. Becker
 
 This program is free software: you can redistribute it and/or modify
