added ToDo items

--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
 * file locking
+* CSRF protection
+* add CSS class for present day (sugg. by Termin
+  <http://cmsimpleforum.com/viewtopic.php?f=10&t=8046>)
