Internationalize postal address

--- a/README
+++ b/README
@@ -19,4 +19,5 @@ For further information see help/help.htm.
 Christoph M. Becker
 Rheinstraße 147
 55424 Münster-Sarmsheim
+GERMANY
 mailto: cmbecker69@gmx.de
